Removed some redundant code, re-added board height variance for when its dependent on window height to ensure the turn token displays at nearly every screen size.  Fixed the glow cutting off at random heights.

--- a/components/css/style.css
+++ b/components/css/style.css
@@ -140,6 +140,7 @@ form {
   align-items: center;
   justify-content: space-around;
   flex-basis: calc(100%/3);
+  max-width: 100px;
   text-align: center;
 }
 
@@ -295,9 +296,7 @@ form {
 }
 
 @media only screen and (min-width: 1000px) {
-  body {
-    height: unset;
-  }
+
 }
 
 .hidden {
